backend: structure checkpoint
