# backend/api/handler/api_op_GetProjectUsers.go
@@ -1,0 +1,10 @@
+package handler
+
+import (
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+func (h *Handler) GetProjectUsers(c *gin.Context) {
+	c.String(http.StatusNotImplemented, "501 not implemented")
+}
